--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            background-color: #f0f0f0;
+            flex-direction: column;
+            background-color: black;
+        }
+
+        #NSOC {
+            font-size: 80px;
+            font-weight: bold;
+            margin-bottom: 50px;
+            margin-top: 0px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background: linear-gradient(to right, #f62153, #e7883e);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .game-container {
@@ -20,8 +33,12 @@
             width: 90%;
             max-width: 400px;
             height: 500px;
-            border: 2px solid #000;
-            background-color: #fff;
+            border: 5px solid;
+            border-image-slice: 1;
+            border-width: 5px;
+            border-image-source: linear-gradient(to right, #f62153, #e7883e);
+            border-radius: 10px;
+            background-color: #000000;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -42,10 +59,11 @@
 
         #sentence {
             font-size: 18px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
 
         .correct {
-            color: green;
+            color: rgb(12, 206, 12);
         }
 
         .incorrect {
@@ -55,9 +73,13 @@
         .block {
             width: 50px;
             height: 50px;
-            background-color: rgba(255, 0, 0, 0.512);
+            background-color: rgba(255, 162, 0, 0.875);
             position: absolute;
+            border-radius: 50%;
             top: 0;
+            box-shadow: 0 0 10px 10px rgba(255, 0, 0, 0.5);
+            animation: glow 1s infinite alternate;
+            z-index: 0;
         }
 
         #inputField {
@@ -66,12 +88,14 @@
             padding: 10px;
             font-size: 18px;
             width: 90%;
+            background-color: black;
+            color: white;
         }
 
         .boundary {
             width: 100%;
-            height: 10px;
-            background-color: black;
+            height: 5px;
+            background-color: rgb(255, 255, 255);
             position: absolute;
             bottom: 0;
         }
@@ -85,8 +109,23 @@
             margin-top: 10px;
             padding: 5px 10px;
             font-size: 18px;
+            font-weight: bold;
             cursor: pointer;
             transform: translate(140px, -20px);
+            color: white;
+            background: linear-gradient(to right, #f62153, #e7883e);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            border: 1px solid white;
+            border-radius: 5px;
+            transition: all 0.3s ease-out;
+        }
+
+        #resetBtn:hover {
+            background: linear-gradient(to right, #f62153, #e7883e);
+            -webkit-text-fill-color: black;
         }
 
         .level-up {
@@ -94,8 +133,9 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            font-size: 24px;
-            color: blue;
+            font-size: 30px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            color: rgb(0, 145, 255);
             opacity: 0;
             transition: opacity 2s ease-out;
         }
@@ -105,11 +145,12 @@
             top: 40%;
             left: 50%;
             transform: translate(-50%, -50%);
+            text-align: center;
             font-size: 18px;
-            color: red;
-            background: rgba(255, 255, 255, 0.8);
+            color: rgb(255, 102, 0);
+            background: rgba(255, 255, 255, 0);
             padding: 10px;
-            border: 1px solid red;
+            font-weight: bold;
             border-radius: 5px;
             opacity: 0;
             transition: opacity 0.5s ease-in-out;
@@ -121,7 +162,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgb(53, 0, 0);
+            background-color: rgb(0, 0, 0);
             color: rgb(222, 127, 127);
             display: flex;
             flex-direction: column;
@@ -136,15 +177,14 @@
             padding: 20px;
             border-radius: 5px;
             text-align: left;
+        }
 
-            h2 {
-                text-align: center;
-            }
+        h2 {
+            text-align: center;
+        }
 
-            p {
-                margin: 5px 0;
-            }
-            transform: translateY(-10px);
+        p {
+            margin: 5px 0;
         }
 
         #startBtn {
@@ -163,6 +203,7 @@
 </head>
 
 <body>
+    <p id="NSOC">NJACK SUMMER OF CODE</p>
     <div class="game-container">
         <div class="overlay" id="overlay">
             <div class="rules">
@@ -170,7 +211,7 @@
                 <p>1. Type the sentence shown on the screen as quickly and accurately as possible.</p>
                 <p>2. Each correct word you type pushes the red block upward.</p>
                 <p>3. The block descends slowly over time, increasing in speed as you level up.</p>
-                <p>4. Avoid letting the block touch the boundary line at the bottom.</p>
+                <p>4. Avoid letting the block touch the white boundary line at the bottom.</p>
                 <p>5. The game ends if the block touches the boundary line.</p>
                 <p>6. Your score is based on the number of correct words typed.</p>
                 <p>7. Your typing speed (WPM) and accuracy will be displayed at the end.</p>
@@ -180,19 +221,19 @@
             <button id="startBtn">Start</button>
         </div>
         <div class="score-container">
-            <p>Score: <span id="score">0</span></p>
-            <p>High Score: <span id="highScore">0</span></p>
+            <p style="color: white; z-index: 1;">Score: <span id="score">0</span></p>
+            <p style="color: white; z-index: 1;">High Score: <span id="highScore">0</span></p>
         </div>
-        <div class="sentence-container">
-            <p id="sentence">Start typing...</p>
+        <div class="sentence-container" style=" z-index: 1;">
+            <p id="sentence" style="color: white; z-index: 1;">Start typing...</p>
         </div>
         <div class="block" id="block"></div>
         <input type="text" id="inputField" placeholder="Type here..." disabled>
         <div class="boundary" id="boundary"></div>
-        <p id="message"></p>
+        <p id="message" style=" z-index: 1;"></p>
         <button id="resetBtn" onclick="startGame()" disabled>Reset</button>
-        <div class="level-up" id="levelUp">Level Up!</div>
-        <div class="popup" id="popup">Backspace is not allowed!</div>
+        <div class="level-up" id="levelUp" style=" z-index: 1;">Level Up!</div>
+        <div class="popup" id="popup" style=" z-index: 1;">Backspace is not allowed!</div>
     </div>
     <script>
         const block = document.getElementById('block');
@@ -240,6 +281,8 @@
         function startCountdown() {
             let countdown = 3;
             message.textContent = countdown;
+            message.style.color = 'white';
+            message.style.fontSize = '40px';
             const countdownInterval = setInterval(() => {
                 countdown--;
                 if (countdown > 0) {
@@ -283,7 +326,7 @@
             totalTyped = 0;
             correctTyped = 0;
 
-            blockSpeed = 1;
+            blockSpeed = 0.8;
             input.disabled = false;
             resetBtn.disabled = false;
             input.focus();
@@ -299,6 +342,9 @@
                     const wpm = calculateWPM();
                     const accuracy = calculateAccuracy();
                     message.textContent = `Game Over! WPM: ${wpm.toFixed(2)}, Accuracy: ${accuracy.toFixed(2)}%`;
+                    message.style.color = 'red';
+                    message.style.fontSize = '18px';
+                    message.style.fontStyle = 'Georgia';
                     if (score > highScore) {
                         highScore = score;
                         highScoreElem.textContent = highScore;
@@ -312,7 +358,7 @@
             levelInterval = setInterval(() => {
                 blockSpeed += 0.5;
                 showLevelUp();
-            }, 5000);
+            }, 7000);
         }
 
         function displaySentence(sentence) {
