--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgb(0, 0, 0);
+            background-color: rgba(0, 0, 0, 0.222);
             color: rgb(222, 127, 127);
             display: flex;
             flex-direction: column;
@@ -345,6 +345,7 @@
                     message.style.color = 'red';
                     message.style.fontSize = '18px';
                     message.style.fontStyle = 'Georgia';
+                    message.style.transform = 'translateY(-10px)';
                     if (score > highScore) {
                         highScore = score;
                         highScoreElem.textContent = highScore;
