--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
             "IIT Patna soon will be the best IIT in India.",
             "Full form of NJACK is Nerds Jointly Addressing Computer Knowledge.",
             "Our another subcoord Rishi got bronze in India Skills 2024.",
-            "I will give you a pastry treat in Nescafe if you continue playing this for 2 minutes with accuracy greater than 95 percent.",
+            "Get a chance to win a pastry treat in Nescafe if you continue playing this for 2 minutes with accuracy greater than 95 percent.",
+            "The chance to win will be decided by a hand cricket match between us if you fulfilled the criteria.",
         ];
         let currentSentence = "";
         let blockSpeed = 1;
