--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             "Full form of NJACK is Nerds Jointly Addressing Computer Knowledge.",
             "Our another subcoord Rishi got bronze in India Skills 2024.",
             "Get a chance to win a pastry treat in Nescafe if you continue playing this for 2 minutes with accuracy greater than 95 percent.",
-            "The chance to win will be decided by a hand cricket match between us if you fulfilled the criteria.",
+            "The chance to win the pastry treat will be decided by a hand cricket match between us if you have fulfilled the other criteria.",
         ];
         let currentSentence = "";
         let blockSpeed = 1;
