--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             <div class="rules">
                 <h2>Game Rules</h2>
                 <p>1. Type the sentence shown on the screen as quickly and accurately as possible.</p>
-                <p>2. Each correct word you type pushes the red block upward.</p>
+                <p>2. Each correct word you type pushes the round block upward.</p>
                 <p>3. The block descends slowly over time, increasing in speed as you level up.</p>
                 <p>4. Avoid letting the block touch the white boundary line at the bottom.</p>
                 <p>5. The game ends if the block touches the boundary line.</p>
