--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
             transform: scale(0);
             opacity: 0;
         }
+
+        @media (max-width: 500px) {
+            .rules {
+                font-size: 14px;
+            }
+        }
     </style>
 </head>
 
