--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             font-weight: bold;
             margin-bottom: 50px;
             margin-top: 0px;
+            text-align: center;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             background: linear-gradient(to right, #f62153, #e7883e);
             -webkit-background-clip: text;
